--- a/mingw-w64-tools/gendef/Makefile.in
+++ b/mingw-w64-tools/gendef/Makefile.in
@@ -204,7 +204,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 gendef_SOURCES = src/gendef.h src/gendef.c
-gendef_CFLAGS = -O3 -g -Werror -Wall -Wextra
+gendef_CFLAGS = -Werror -Wall -W
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
