--- a/mingw-w64-tools/gendef/configure.ac
+++ b/mingw-w64-tools/gendef/configure.ac
@@ -29,7 +29,10 @@ AC_TYPE_UINT64_T
 AC_TYPE_UINT8_T
 
 # Checks for library functions.
-AC_FUNC_MALLOC
+# Disabled due the fact that once the autoconf detects that malloc
+# is not available, it places in config.h the define of malloc as
+# rpl_malloc. By this linkage could fail on cross-compiles.
+#AC_FUNC_MALLOC
 AC_CHECK_FUNCS([memset strdup strrchr strlwr])
 
 AC_CONFIG_FILES([Makefile])
