crt: Move some x86 specific math functions from libmingwex to libmsvcr*
We can use the UCRT provided version of these functions, thus
move them away from libmingwex and into the libmsvcr* specific
libraries instead.

Leave the -l suffixed ones, for long doubles, where we can't use
the UCRT version on x86.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
@@ -158,7 +158,7 @@ asinh
 asinhf
 asinhl F_X86_ANY(DATA)
 atan
-atan2 F_X86_ANY(DATA)
+atan2
 F_NON_I386(atan2f F_X86_ANY(DATA))
 F_ARM_ANY(atan2l == atan2)
 F_NON_I386(atanf F_X86_ANY(DATA))
@@ -199,7 +199,7 @@ ccosh
 ccoshf
 ccoshl
 ccosl
-ceil F_X86_ANY(DATA)
+ceil
 F_NON_I386(ceilf F_X86_ANY(DATA))
 F_ARM_ANY(ceill == ceil)
 cexp
@@ -220,7 +220,7 @@ conjl
 copysign
 copysignf
 copysignl F_X86_ANY(DATA)
-cos F_X86_ANY(DATA)
+cos
 F_NON_I386(cosf F_X86_ANY(DATA))
 F_ARM_ANY(cosl == cos)
 cosh
@@ -255,7 +255,7 @@ erfcf
 erfcl F_X86_ANY(DATA)
 erff
 erfl F_X86_ANY(DATA)
-exp F_X86_ANY(DATA)
+exp
 exp2
 exp2f
 exp2l F_X86_ANY(DATA)
@@ -269,7 +269,7 @@ F_ARM_ANY(fabsf)
 fdim
 fdimf
 fdiml F_X86_ANY(DATA)
-floor F_X86_ANY(DATA)
+floor
 F_NON_I386(floorf F_X86_ANY(DATA))
 F_ARM_ANY(floorl == floor)
 fma
@@ -281,7 +281,7 @@ fmaxl F_X86_ANY(DATA)
 fmin
 fminf
 fminl F_X86_ANY(DATA)
-fmod F_X86_ANY(DATA)
+fmod
 F_NON_I386(fmodf F_X86_ANY(DATA))
 F_ARM_ANY(fmodl == fmod)
 frexp
@@ -289,7 +289,7 @@ hypot
 ilogb
 ilogbf
 ilogbl F_X86_ANY(DATA)
-ldexp F_X86_ANY(DATA)
+ldexp
 ; The UCRT lgamma functions don't set/provide the signgam variable like
 ; the mingw ones do. Therefore prefer the libmingwex version instead.
 lgamma DATA
@@ -301,7 +301,7 @@ llrintl F_X86_ANY(DATA)
 llround
 llroundf
 llroundl F_X86_ANY(DATA)
-log F_X86_ANY(DATA)
+log
 log10
 F_NON_I386(log10f F_X86_ANY(DATA))
 F_ARM_ANY(log10l == log10)
@@ -341,7 +341,7 @@ nexttowardl F_X86_ANY(DATA)
 norm
 normf
 norml
-pow F_X86_ANY(DATA)
+pow
 F_NON_I386(powf F_X86_ANY(DATA))
 F_ARM_ANY(powl == pow)
 remainder
@@ -362,7 +362,7 @@ scalblnl F_X86_ANY(DATA)
 scalbn
 scalbnf
 scalbnl F_X86_ANY(DATA)
-sin F_X86_ANY(DATA)
+sin
 F_NON_I386(sinf F_X86_ANY(DATA))
 F_ARM_ANY(sinl == sin)
 ; if we implement sinh, we can set it DATA only.
