crt: Move certain x86 math functions to libmsvcr*.a for all x86, and to libucrt*.a for x86_32
These are functions that are present in UCRT on all architctures
except for x86_32.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
@@ -146,22 +146,22 @@ y1 == _y1
 _yn
 yn == _yn
 acos
-F_NON_I386(acosf F_X86_ANY(DATA))
+F_NON_I386(acosf)
 F_ARM_ANY(acosl == acos)
 acosh
 acoshf
 acoshl F_X86_ANY(DATA)
 asin
-F_NON_I386(asinf F_X86_ANY(DATA))
+F_NON_I386(asinf)
 F_ARM_ANY(asinl == asin)
 asinh
 asinhf
 asinhl F_X86_ANY(DATA)
 atan
 atan2
-F_NON_I386(atan2f F_X86_ANY(DATA))
+F_NON_I386(atan2f)
 F_ARM_ANY(atan2l == atan2)
-F_NON_I386(atanf F_X86_ANY(DATA))
+F_NON_I386(atanf)
 F_ARM_ANY(atanl == atan)
 atanh
 atanhf
@@ -200,7 +200,7 @@ ccoshf
 ccoshl
 ccosl
 ceil
-F_NON_I386(ceilf F_X86_ANY(DATA))
+F_NON_I386(ceilf)
 F_ARM_ANY(ceill == ceil)
 cexp
 cexpf
@@ -221,7 +221,7 @@ copysign
 copysignf
 copysignl F_X86_ANY(DATA)
 cos
-F_NON_I386(cosf F_X86_ANY(DATA))
+F_NON_I386(cosf)
 F_ARM_ANY(cosl == cos)
 cosh
 F_NON_I386(coshf DATA)
@@ -270,7 +270,7 @@ fdim
 fdimf
 fdiml F_X86_ANY(DATA)
 floor
-F_NON_I386(floorf F_X86_ANY(DATA))
+F_NON_I386(floorf)
 F_ARM_ANY(floorl == floor)
 fma
 fmaf
@@ -282,7 +282,7 @@ fmin
 fminf
 fminl F_X86_ANY(DATA)
 fmod
-F_NON_I386(fmodf F_X86_ANY(DATA))
+F_NON_I386(fmodf)
 F_ARM_ANY(fmodl == fmod)
 frexp
 hypot
@@ -363,7 +363,7 @@ scalbn
 scalbnf
 scalbnl F_X86_ANY(DATA)
 sin
-F_NON_I386(sinf F_X86_ANY(DATA))
+F_NON_I386(sinf)
 F_ARM_ANY(sinl == sin)
 ; if we implement sinh, we can set it DATA only.
 sinh
@@ -371,7 +371,7 @@ F_NON_I386(sinhf DATA)
 sqrt
 F_NON_I386(sqrtf DATA)
 tan
-F_NON_I386(tanf F_X86_ANY(DATA))
+F_NON_I386(tanf)
 F_ARM_ANY(tanl == tan)
 ; if we implement tanh, we can set it to DATA only.
 tanh
