--- a/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
@@ -224,7 +224,7 @@ cos
 F_NON_I386(cosf)
 F_ARM_ANY(cosl == cos)
 cosh
-F_NON_I386(coshf DATA)
+F_NON_I386(coshf)
 cpow
 cpowf
 cpowl
@@ -259,7 +259,7 @@ exp
 exp2
 exp2f
 exp2l F_X86_ANY(DATA)
-F_NON_I386(expf F_X86_ANY(DATA))
+F_NON_I386(expf)
 F_ARM_ANY(expl == exp)
 expm1
 expm1f
@@ -303,7 +303,7 @@ llroundf
 llroundl F_X86_ANY(DATA)
 log
 log10
-F_NON_I386(log10f F_X86_ANY(DATA))
+F_NON_I386(log10f)
 F_ARM_ANY(log10l == log10)
 log1p
 log1pf
@@ -314,7 +314,7 @@ log2l F_X86_ANY(DATA)
 logb
 logbf
 logbl F_X86_ANY(DATA)
-F_NON_I386(logf F_X86_ANY(DATA))
+F_NON_I386(logf)
 F_ARM_ANY(logl == log)
 lrint
 lrintf
@@ -323,7 +323,7 @@ lround
 lroundf
 lroundl F_X86_ANY(DATA)
 modf
-F_NON_I386(modff DATA)
+F_NON_I386(modff)
 nan
 nanf
 nanl F_X86_ANY(DATA)
@@ -342,7 +342,7 @@ norm
 normf
 norml
 pow
-F_NON_I386(powf F_X86_ANY(DATA))
+F_NON_I386(powf)
 F_ARM_ANY(powl == pow)
 remainder
 remainderf
@@ -367,9 +367,9 @@ F_NON_I386(sinf)
 F_ARM_ANY(sinl == sin)
 ; if we implement sinh, we can set it DATA only.
 sinh
-F_NON_I386(sinhf DATA)
+F_NON_I386(sinhf)
 sqrt
-F_NON_I386(sqrtf DATA)
+F_NON_I386(sqrtf)
 tan
 F_NON_I386(tanf)
 F_ARM_ANY(tanl == tan)
