--- a/mingw-w64-crt/lib-common/ucrtbase.def.in
+++ b/mingw-w64-crt/lib-common/ucrtbase.def.in
@@ -2273,7 +2273,7 @@ cos
 F_NON_I386(cosf)
 F_ARM_ANY(cosl == cos)
 cosh
-F_NON_I386(coshf DATA)
+F_NON_I386(coshf)
 cpow
 cpowf
 cpowl
@@ -2310,7 +2310,7 @@ exp
 exp2
 exp2f
 exp2l F_X86_ANY(DATA)
-F_NON_I386(expf F_X86_ANY(DATA))
+F_NON_I386(expf)
 F_ARM_ANY(expl == exp)
 expm1
 expm1f
@@ -2433,7 +2433,7 @@ llroundl F_X86_ANY(DATA)
 localeconv
 log
 log10
-F_NON_I386(log10f F_X86_ANY(DATA))
+F_NON_I386(log10f)
 F_ARM_ANY(log10l == log10)
 log1p
 log1pf
@@ -2444,7 +2444,7 @@ log2l F_X86_ANY(DATA)
 logb
 logbf
 logbl F_X86_ANY(DATA)
-F_NON_I386(logf F_X86_ANY(DATA))
+F_NON_I386(logf)
 F_ARM_ANY(logl == log)
 longjmp
 lrint
@@ -2472,7 +2472,7 @@ memmove
 memmove_s
 memset
 modf
-F_NON_I386(modff DATA)
+F_NON_I386(modff)
 nan
 nanf
 nanl F_X86_ANY(DATA)
@@ -2492,7 +2492,7 @@ normf
 norml
 perror
 pow
-F_NON_I386(powf F_X86_ANY(DATA))
+F_NON_I386(powf)
 F_ARM_ANY(powl == pow)
 putc
 putchar
@@ -2539,9 +2539,9 @@ F_NON_I386(sinf)
 F_ARM_ANY(sinl == sin)
 ; if we implement sinh, we can set it DATA only.
 sinh
-F_NON_I386(sinhf DATA)
+F_NON_I386(sinhf)
 sqrt
-F_NON_I386(sqrtf DATA)
+F_NON_I386(sqrtf)
 srand
 strcat
 strcat_s
