--- a/mingw-w64-crt/lib-common/ws2_32.def.in
+++ b/mingw-w64-crt/lib-common/ws2_32.def.in
@@ -11,12 +11,14 @@ getsockname
 getsockopt
 htonl
 htons
+htonll
 ioctlsocket
 inet_addr
 inet_ntoa
 listen
 ntohl
 ntohs
+ntohll
 recv
 recvfrom
 select
