crt: Add mi import library
Required for https://github.com/cloudbase/PyMI.git

Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -305,6 +305,7 @@ lib64_DATA += %reldir%/libmfc42u.a
 lib64_DATA += %reldir%/libmfreadwrite.a
 lib64_DATA += %reldir%/libmfsensorgroup.a
 lib64_DATA += %reldir%/libmgmtapi.a
+lib64_DATA += %reldir%/libmi.a
 lib64_DATA += %reldir%/libmidimap.a
 lib64_DATA += %reldir%/libmigism.a
 lib64_DATA += %reldir%/libmiglibnt.a
