--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -164,6 +164,7 @@ libarm64_DATA += %reldir%/libmfplay.a
 libarm64_DATA += %reldir%/libmfreadwrite.a
 libarm64_DATA += %reldir%/libmfsensorgroup.a
 libarm64_DATA += %reldir%/libmgmtapi.a
+libarm64_DATA += %reldir%/libmi.a
 libarm64_DATA += %reldir%/libmidimap.a
 libarm64_DATA += %reldir%/libmincore.a
 libarm64_DATA += %reldir%/libmlang.a
