headers: Import windows.ui.composition.interop.idl from Wine.
Signed-off-by: Jacek Caban <jacek@codeweavers.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -310,6 +310,7 @@ IDL_SRCS = \
   include/windows.system.userprofile.idl \
   include/windows.ui.idl \
   include/windows.ui.composition.idl \
+  include/windows.ui.composition.interop.idl \
   include/windows.ui.core.idl \
   include/windows.ui.viewmanagement.idl \
   include/windowscontracts.idl \
