headers: import windows.graphics.capture.interop.idl from wine
Required for pywinrt/python-winsdk project

Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -288,6 +288,7 @@ IDL_SRCS = \
   include/windows.gaming.ui.idl \
   include/windows.globalization.idl \
   include/windows.graphics.capture.idl \
+  include/windows.graphics.capture.interop.idl \
   include/windows.graphics.directx.idl \
   include/windows.graphics.directx.direct3d11.idl \
   include/windows.graphics.effects.idl \
