crt: Add GetTempPath2 and AreShortNamesEnabled in kernel32.def
Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib-common/kernel32.def.in
+++ b/mingw-w64-crt/lib-common/kernel32.def.in
@@ -38,6 +38,7 @@ AppXGetOSMaxVersionTested
 ApplicationRecoveryFinished
 ApplicationRecoveryInProgress
 AreFileApisANSI
+AreShortNamesEnabled
 AssignProcessToJobObject
 AttachConsole
 BackupRead
@@ -785,6 +786,8 @@ GetTempFileNameA
 GetTempFileNameW
 GetTempPathA
 GetTempPathW
+GetTempPath2A
+GetTempPath2W
 GetThreadContext
 GetThreadDescription
 GetThreadErrorMode
