--- a/mingw-w64-crt/lib-common/kernel32.def.in
+++ b/mingw-w64-crt/lib-common/kernel32.def.in
@@ -6,6 +6,7 @@ AcquireSRWLockExclusive
 AcquireSRWLockShared
 ActivateActCtx
 ActivateActCtxWorker
+ActivatePackageVirtualizationContext
 AddAtomA
 AddAtomW
 AddConsoleAliasA
@@ -117,6 +118,12 @@ BuildCommDCBA
 BuildCommDCBAndTimeoutsA
 BuildCommDCBAndTimeoutsW
 BuildCommDCBW
+BuildIoRingCancelRequest
+BuildIoRingFlushFile
+BuildIoRingReadFile
+BuildIoRingRegisterBuffers
+BuildIoRingRegisterFileHandles
+BuildIoRingWriteFile
 CallNamedPipeA
 CallNamedPipeW
 CallbackMayRunLong
@@ -144,6 +151,7 @@ ClearCommBreak
 ClearCommError
 CloseConsoleHandle
 CloseHandle
+CloseIoRing
 ClosePackageInfo
 ClosePrivateNamespace
 CloseProfileUserMapping
@@ -220,6 +228,7 @@ CreateHardLinkTransactedA
 CreateHardLinkTransactedW
 CreateHardLinkW
 CreateIoCompletionPort
+CreateIoRing
 CreateJobObjectA
 CreateJobObjectW
 CreateJobSet
@@ -233,6 +242,7 @@ CreateMutexW
 CreateNamedPipeA
 CreateNamedPipeW
 CreateNlsSecurityDescriptor
+CreatePackageVirtualizationContext
 CreatePipe
 CreatePrivateNamespaceA
 CreatePrivateNamespaceW
@@ -274,6 +284,7 @@ CreateWaitableTimerW
 CtrlRoutine
 DeactivateActCtx
 DeactivateActCtxWorker
+DeactivatePackageVirtualizationContext
 DebugActiveProcess
 DebugActiveProcessStop
 DebugBreak
@@ -317,6 +328,8 @@ DosPathToSessionPathW
 DuplicateConsoleHandle
 DuplicateEncryptionInfoFileExt
 DuplicateHandle
+DuplicatePackageVirtualizationContext
+EnableProcessOptionalXStateFeatures
 EnableThreadProfiling
 EncodePointer
 EncodeSystemPointer
@@ -555,6 +568,7 @@ GetCurrentPackageFullName
 GetCurrentPackageId
 GetCurrentPackageInfo
 GetCurrentPackagePath
+GetCurrentPackageVirtualizationContext
 GetCurrentProcess
 GetCurrentProcessId
 GetCurrentProcessorNumber
@@ -631,6 +645,7 @@ GetGeoInfoA
 GetGeoInfoW
 GetGeoInfoEx
 GetHandleInformation
+GetIoRingInfo
 GetLargePageMinimum
 GetLargestConsoleWindowSize
 GetLastError
@@ -648,6 +663,7 @@ GetLongPathNameA
 GetLongPathNameTransactedA
 GetLongPathNameTransactedW
 GetLongPathNameW
+GetMachineTypeAttributes
 GetMailslotInfo
 GetMaximumProcessorCount
 GetMaximumProcessorGroupCount
@@ -679,6 +695,7 @@ GetNumaAvailableMemoryNodeEx
 GetNumaHighestNodeNumber
 GetNumaNodeNumberFromHandle
 GetNumaNodeProcessorMask
+GetNumaNodeProcessorMask2
 GetNumaNodeProcessorMaskEx
 GetNumaProcessorNode
 GetNumaProcessorNodeEx
@@ -715,6 +732,7 @@ GetPrivateProfileStructA
 GetPrivateProfileStructW
 GetProcAddress
 GetProcessAffinityMask
+GetProcessDefaultCpuSetMasks
 GetProcessDefaultCpuSets
 GetProcessDEPPolicy
 GetProcessGroupAffinity
@@ -733,6 +751,7 @@ GetProcessTimes
 GetProcessVersion
 GetProcessWorkingSetSize
 GetProcessWorkingSetSizeEx
+GetProcessesInVirtualizationContext
 GetProcessorSystemCycleTime
 GetProductInfo
 GetProfileIntA
@@ -790,6 +809,7 @@ GetTempPath2A
 GetTempPath2W
 GetThreadContext
 GetThreadDescription
+GetThreadEnabledXStateFeatures
 GetThreadErrorMode
 GetThreadGroupAffinity
 GetThreadIOPendingFlag
@@ -800,6 +820,7 @@ GetThreadLocale
 GetThreadPreferredUILanguages
 GetThreadPriority
 GetThreadPriorityBoost
+GetThreadSelectedCpuSetMasks
 GetThreadSelectedCpuSets
 GetThreadSelectorEntry
 GetThreadTimes
@@ -927,6 +948,7 @@ IsDBCSLeadByte
 IsDBCSLeadByteEx
 IsDebuggerPresent
 IsEnclaveTypeSupported
+IsIoRingOpSupported
 IsNLSDefinedString
 IsNativeVhdBoot
 IsNormalizedString
@@ -937,6 +959,7 @@ IsSystemResumeAutomatic
 IsThreadAFiber
 IsThreadpoolTimerSet
 IsTimeZoneRedirectionEnabled
+IsUserCetAvailableInEnvironment
 IsValidCalDateTime
 IsValidCodePage
 IsValidLanguageGroup
@@ -1098,6 +1121,7 @@ ParseApplicationUserModelId
 PeekConsoleInputA
 PeekConsoleInputW
 PeekNamedPipe
+PopIoRingCompletion
 PostQueuedCompletionStatus
 PowerClearRequest
 PowerCreateRequest
@@ -1139,6 +1163,7 @@ QueryIdleProcessorCycleTime
 QueryIdleProcessorCycleTimeEx
 QueryInformationJobObject
 QueryIoRateControlInformationJobObject
+QueryIoRingCapabilities
 QueryMemoryResourceNotification
 QueryPerformanceCounter
 QueryPerformanceFrequency
@@ -1151,6 +1176,7 @@ QueryThreadpoolStackInformation
 F_X64(QueryUmsThreadInformation)
 QueryUnbiasedInterruptTime
 QueueUserAPC
+QueueUserAPC2
 QueueUserWorkItem
 QuirkGetData2Worker
 QuirkGetDataWorker
@@ -1253,6 +1279,7 @@ ReleaseActCtx
 ReleaseActCtxWorker
 ReleaseMutex
 ReleaseMutexWhenCallbackReturns
+ReleasePackageVirtualizationContext
 ReleaseSRWLockExclusive
 ReleaseSRWLockShared
 ReleaseSemaphore
@@ -1289,6 +1316,7 @@ RtlCopyMemory
 RtlDeleteFunctionTable
 RtlFillMemory
 RtlInstallFunctionTableCallback
+RtlIsEcCode
 RtlLookupFunctionEntry
 RtlMoveMemory
 RtlPcToFileHeader
@@ -1297,6 +1325,7 @@ RtlRestoreContext
 RtlUnwind
 RtlUnwindEx
 RtlVirtualUnwind
+RtlVirtualUnwind2
 RtlZeroMemory
 ScrollConsoleScreenBufferA
 ScrollConsoleScreenBufferW
@@ -1392,6 +1421,7 @@ SetHandleCount
 SetHandleInformation
 SetInformationJobObject
 SetIoRateControlInformationJobObject
+SetIoRingCompletionEvent
 SetLastConsoleEventActive
 SetLastError
 SetLocalPrimaryComputerNameA
@@ -1407,7 +1437,10 @@ SetPriorityClass
 SetProcessAffinityMask
 SetProcessAffinityUpdateMode
 SetProcessDEPPolicy
+SetProcessDefaultCpuSetMasks
 SetProcessDefaultCpuSets
+SetProcessDynamicEHContinuationTargets
+SetProcessDynamicEnforcedCetCompatibleRanges
 SetProcessInformation
 SetProcessMitigationPolicy
 SetProcessPreferredUILanguages
@@ -1439,6 +1472,7 @@ SetThreadLocale
 SetThreadPreferredUILanguages
 SetThreadPriority
 SetThreadPriorityBoost
+SetThreadSelectedCpuSetMasks
 SetThreadSelectedCpuSets
 SetThreadStackGuarantee
 ; MSDN says this is exported from ADVAPI32.DLL.
@@ -1477,6 +1511,7 @@ SleepEx
 SortCloseHandle
 SortGetHandle
 StartThreadpoolIo
+SubmitIoRing
 SubmitThreadpoolWork
 SuspendThread
 SwitchToFiber
