crt: Move wer to lib-common
Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -324,6 +324,7 @@ libarm64_DATA += %reldir%/libwebauthn.a
 libarm64_DATA += %reldir%/libwebclnt.a
 libarm64_DATA += %reldir%/libwebsocket.a
 libarm64_DATA += %reldir%/libwecapi.a
+libarm64_DATA += %reldir%/libwer.a
 libarm64_DATA += %reldir%/libwevtapi.a
 libarm64_DATA += %reldir%/libwiashext.a
 libarm64_DATA += %reldir%/libwimgapi.a
